--- a/create.html
+++ b/create.html
@@ -5,7 +5,10 @@
 		<title>언어 사전</title>
 		<meta charset="utf-8">
 		<link rel="stylesheet" href="style.css">
-		<link href="https://fonts.googleapis.com/css?family=Nanum+Myeongjo|Noto+Sans+KR&display=swap" rel="stylesheet">
+		<link rel="stylesheet" href="switch.css">
+		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nanum+Myeongjo|Noto+Sans+KR&display=swap" >
+		<link rel="stylesheet" href="style_mobile.css">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	</head>
 
 	<body>
