기능: 뜻 입력시 세계 지정 가능
사용자가 뜻을 입력할 때 지금 입력하는 뜻이 어떤 맥락에서 입력되는 뜻인지 분류되도록 '세계' 카테고리를 함께 지정할 수 있게끔 하고 싶었다.

- create_meaning.php 페이지에 html문법으로 폼을 추가했다. 사용자는 지금 등록하는 뜻이 어느 세계에 속하는지 정할 수 있다.
- 데이터베이스의 meaning 테이블에 world_id 칼럼을 추가했다. (int(11) /null가능/ default NULL) 각각의 뜻마다 다른 world_id를 가질 수 있다. 세계가 지정되지 않은 뜻의 기본 값은 NULL로 설정했다.
- NULL로 설정하는 와중에 지난 update_word_process.php에서 NULL에 따라 문제를 겪었던 것을 떠올렸다. 다시 살펴보았더니 컬럼 값에 들어갈 값을 따옴표로 감쌌기 때문에 문제가 있던 것이었다. 숫자의 경우 따옴표로 감싸도 괜찮았으나 NULL의 경우에는 따옴표로 감쌀 경우 int(11) 형식에 어긋나 문제가 생겼던 것이었다. 따옴표를 없앰으로써 문제를 해결했다.
- create_meaning_process.php 파일에 world_id 컬럼 내용을 입력하는 명령어를 추가했다. 이 때 NULL을 포함한 int(11)형식의 데이터를 감쌀 따옴표는 넣지 않았다.
- 잘 돌아가는 것을 확인. 뜻 입력시 세계 카테고리를 지정하여 저장하면 meaning의 world_id 칼럼에 숫자가 저장되고 세계 카테고리를 지정하지 않고 '전체'로 두면 world_id가 NULL로 저장된다.

남은 과제
- 디자인 업데이트

Use Case 작성하기. 왜냐하면 사용자가 뜻 만들기 이전에 어떤 경로로 뜻을 만들게 되는지가 아직 불분명하다.

--- a/create.html
+++ b/create.html
@@ -36,6 +36,8 @@
 
                         </p>
 
+                        <input type="hidden" name="category">
+
                         <!-- <p>
                         	<textarea name="meaning" placeholder="정의"></textarea>
                         </p> -->
